welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:8: error: not found: value setPose
setPose(0,diag+1)
^